--- a/src/css/common.css
+++ b/src/css/common.css
@@ -22,3 +22,11 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  align-items: center;
+  list-style: none;
+}
