--- a/css/common.css
+++ b/css/common.css
@@ -30,3 +30,10 @@ button {
   align-items: center;
   list-style: none;
 }
+
+#boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
